--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <header>
     <div class="header-container">
         <div class="header-logo">
-    <h1 class="logo">Hello  Text</h1>
+    <h1 class="logo">Hello there</h1>
 </div>
     <nav>
         <ul>
             <li>Home</li>
-            <li>About us</li>
+            <li>About me</li>
             <li>Contact us</li>
         </ul>
     </nav>
@@ -31,9 +31,9 @@
   <section class="one">
     <div class="flex-container">
         <div class="box-left">
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title.
-                It's a smaller font and the color is lower contrast.
+            <h2>Here is my simple website</h2>
+            <p>Through this website can just give a look to variety of contents.
+                regarding Home, Skills, About ..
             </p>
             <button class="signup">Sign Up</button>
         </div>
@@ -47,30 +47,30 @@
   
   <section class="two">
     <div class="two-header">
-    <h1>some random information</h1>
+    <h1>Here are some beautiful cat, give give a look😎</h1>
 </div>
     <div class="box-container">
         <div class="box">
             <div class="box-one"></div>
-            <p>This is some subtext under an illustration or image</p>
+            <p>This is some texts as well as images/p>
         </div>
         <div class="box">
             <div class="box-one">
-                <img src="./images/popular-03 (1).jpg">
+                <img src="./images/chilled cat.png">
             </div>
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div class="box">
             <div class="box-one">
-                <img src="./images/popular-02.jpg" alt="">
+                <img src="./images/GettyImage.jpg" alt="">
             </div>
-            <p>This is some subtext under an illustration or image</p>
+            <p>This is some texts as well as images</p>
         </div>
         <div class="box">
             <div class="box-one">
-                <img src="images/popular-05.jpg" alt="">
+                <img src="images/pexels-cat.jpg" alt="">
             </div>
-            <p>This is some subtext under an illustration or image</p>
+            <p>This is some texts as well as images/p>
         </div>
     </div>
 </section>
@@ -79,12 +79,15 @@
     <div class="section-three">
         <div class="section-three-a">
     <p>
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
-        or maybe people will actually read it. Who knows? All know is that it looks nice.
+        What is the most expensive cat in the world?
+        The Ashera cat is considered the most expensive cat breed in the world, 
+        with prices reaching up to $100,000 or more. 
+        This is due to its rarity and the fact that it is a hybrid breed, created by breeding an African serval, 
+        an Asian leopard cat, and a domestic house cat.
     </p>
 </div>
     <div class="section-three-b">
-    <p class="">-Thor, God of Thunder</p>
+    <p class="">Established by an american researcher named Johnson Tendal<p>
 </div>
 </div>
 </section>
@@ -92,8 +95,8 @@
   <section class="section-four">
     <div class="section-four-container">
     <div class="section-four-container-left">
-        <h3>call to action! It's time!</h3>
-        <p>sign up for our product by clicking that button right over there!</p>
+        <h3>Which can do you prefer to choose?</h3>
+        <p>just sign up for our cats by clicking that button right over there!</p>
     </div>
     <div class="section-four-container-right">
         <button class="signup">Sign up</button>
@@ -103,7 +106,7 @@
 
   <!-- Section 6: Footer -->
   <footer>
-    <p>&copy; All rights reserved by Erick</p>
+    <p>&copy; All rights reserved by Johns</p>
   </footer>
 
 </body>
