--- a/landing.html
+++ b/landing.html
@@ -34,7 +34,7 @@
         </div>
         <div class="box">
             <h2>Box 4</h2>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p>Duis aute irure dolor in repr.</p>
         </div>
     </section>
     
